git-svn-id: https://svn.ecdf.ed.ac.uk/repo/inf/konstas/Generator@1246 554d2c04-29e4-4109-9b11-0fd97a6c5eca